TheMightyDude (23 September 2013)
--------------------------------------
Fixed bug in BntDb::initDb(...) where it had the database name argument missing.
Fixed issue in BntDb::initDb(...) when using ADOdb's postgres driver when postgres isn't installed.
Fixed bug in new2.php when looking up if new account info already exists.
Fixed PHP Notice: Undefined index: l_options in teams.php on line 771
Fixed PHP Notice: Undefined index: l_score in teams.php on line 791
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 657
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 671
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 672
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 673
Fixed PHP Notice: Undefined variable: langvars in teams.php on line 674
Fixed PHP Strict Standards: Non-static method BntDefense::defence_vs_defence() should not be called statically in teams.php on line 187

TheKabal (22 September 2013)
--------------------------------------
Move TestXml to BntTestXml
Move Template to BntTemplate
Move TemplateSystem to BntXmlTemplateSystem
Move PluginSystem to BntPluginSystem
Move CalcLevels to BntCalcLevels
Move PlayerLog to BntPlayerLog
Move CheckBan to BntCheckBan
Move Timer to BntTimer (classes should be prefixed with Bnt where possible)
Move SectorDefense to BntSectorDefense (classes should be prefixed with Bnt where possible)
Move AdminLog to BntAdminLog (classes should be prefixed with Bnt where possible)
Move SetPaths to BntSetPaths (classes should be prefixed with Bnt where possible)
Move MoveLog to BntMoveLog (classes should be prefixed with Bnt where possible)

TheKabal (21 September 2013)
--------------------------------------
Change the install documentation to specifically call out that people need to ask their hosting provider for the location of the program to call from cron.

TheMightyDude (17 September 2013)
--------------------------------------