@@ -31,13 +31,12 @@ include './header.php';
 // Database driven language entries
 $langvars = BntTranslate::load ($db, $lang, array ('rsmove', 'common', 'global_funcs', 'global_includes', 'combat', 'footer', 'news'));
 
+// Get the Players Information.
 $res = $db->Execute ("SELECT * FROM {$db->prefix}ships WHERE email = ?;", array ($_SESSION['username']));
 DbOp::dbResult ($db, $res, __LINE__, __FILE__);
 $playerinfo = $res->fields;
 
 echo "<h1>" . $title . "</h1>\n";
-
-$deg = pi () / 180;
 
 /* TK version
 $destination = null;
@@ -57,174 +56,214 @@ if ($destination < 1 || $destination > $sector_max)
 }
 */
 
-/* TMD version */
-$destination  = filter_input (INPUT_GET, 'destination', FILTER_SANITIZE_NUMBER_INT);
+/* TMD version 
+ * Returns null if it doesn't have it set, boolean false if its set but fails to validate and the actual value if it all passes.
+ */
+$destination  = filter_input (INPUT_GET, 'destination', FILTER_VALIDATE_INT, array('options'=>array('min_range'=>1, 'max_range'=>$sector_max)));
 if ( is_null($destination) )
 {
-    $destination  = filter_input (INPUT_POST, 'destination', FILTER_SANITIZE_NUMBER_INT);
+    $destination  = filter_input (INPUT_POST, 'destination', FILTER_VALIDATE_INT, array('options'=>array('min_range'=>1, 'max_range'=>$sector_max)));
 }
 
-if ( !is_null($destination) && strlen(trim($destination)) <=1)
+$engage  = filter_input (INPUT_GET, 'engage', FILTER_VALIDATE_INT, array('options'=>array('min_range'=>0, 'max_range'=>2)));
+
+if ($destination === false || $engage === false)
 {
-    $destination = null;
+    // Either the destination or the engage variables have failed validation.
+    /* Output:
+     * Invalid Destination
+     */
+
+    echo $langvars['l_rs_invalid'] . ".<br><br>";
+    $resx = $db->Execute ("UPDATE {$db->prefix}ships SET cleared_defences=' ' WHERE ship_id = ?;", array ($playerinfo['ship_id']));
+    DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
 }
-
-if ( !is_null($destination) )
+else
 {
-    settype($destination, "integer");
-}
-
-$engage  = (int) filter_input (INPUT_GET, 'engage', FILTER_SANITIZE_NUMBER_INT);
-
-if (isset ($destination))
-{
-    $destination = round (abs ($destination));
-    $result2 = $db->Execute ("SELECT angle1, angle2, distance FROM {$db->prefix}universe WHERE sector_id = ?;", array ($playerinfo['sector']));
-    DbOp::dbResult ($db, $result2, __LINE__, __FILE__);
-    $start = $result2->fields;
-    $result3 = $db->Execute ("SELECT angle1, angle2, distance FROM {$db->prefix}universe WHERE sector_id = ?;", array ($destination));
-    DbOp::dbResult ($db, $result3, __LINE__, __FILE__);
-    $finish = $result3->fields;
-    $sa1 = $start['angle1'] * $deg;
-    $sa2 = $start['angle2'] * $deg;
-    $fa1 = $finish['angle1'] * $deg;
-    $fa2 = $finish['angle2'] * $deg;
-    $x = ($start['distance'] * sin ($sa1) * cos ($sa2)) - ($finish['distance'] * sin ($fa1) * cos ($fa2));
-    $y = ($start['distance'] * sin ($sa1) * sin ($sa2)) - ($finish['distance'] * sin ($fa1) * sin ($fa2));
-    $z = ($start['distance'] * cos ($sa1)) - ($finish['distance'] * cos ($fa1));
-    $distance = round (sqrt (pow ($x, 2) + pow ($y, 2) + pow ($z, 2)));
-    $shipspeed = pow ($level_factor, $playerinfo['engines']);
-    $triptime = round ($distance / $shipspeed);
-
-    if ($triptime == 0 && $destination != $playerinfo['sector'])
+    // Check if we haven't been sent the destination.
+    if (is_null($destination) === true)
     {
-        $triptime = 1;
+        // Nope, destination not sent, so show Web Form for destination.
+        /* Output:
+         * <form action='rsmove.php' method='post'>
+         * You are presently in sector X - and there are sectors available from 1 to Y.
+         * Which sector would you like to reach through Realspace? :  <input type='text' name='destination' size='10' maxlength='10'>
+         * <input type='submit' value='Compute'>
+         * </form>
+         */
+        echo "<form action='rsmove.php' method='post'>\n";
+        $langvars['l_rs_insector'] = str_replace ("[sector]", $playerinfo['sector'], $langvars['l_rs_insector']);
+        $langvars['l_rs_insector'] = str_replace ("[sector_max]", $sector_max - 1, $langvars['l_rs_insector']);
+        echo $langvars['l_rs_insector'] . "<br><br>\n";
+        echo $langvars['l_rs_whichsector'] . ":  <input type='text' name='destination' size='10' maxlength='10'><br><br>\n";
+        echo "<input type='submit' value='" . $langvars['l_rs_submit'] . "'><br><br>\n";
+        echo "</form>\n";
+    }
+    else
+    {
+        // Ok, we have been given the destination value...
+        // Get the players current sector information.
+        $result2 = $db->Execute ("SELECT angle1, angle2, distance FROM {$db->prefix}universe WHERE sector_id = ?;", array ($playerinfo['sector']));
+        DbOp::dbResult ($db, $result2, __LINE__, __FILE__);
+        $start = $result2->fields;
+
+        // Get the destination sector information.
+        $result3 = $db->Execute ("SELECT angle1, angle2, distance FROM {$db->prefix}universe WHERE sector_id = ?;", array ($destination));
+        DbOp::dbResult ($db, $result3, __LINE__, __FILE__);
+        $finish = $result3->fields;
+
+        // Calculate the Math for the Distance.
+        $deg = pi () / 180;
+
+        $sa1 = $start['angle1'] * $deg;
+        $sa2 = $start['angle2'] * $deg;
+        $fa1 = $finish['angle1'] * $deg;
+        $fa2 = $finish['angle2'] * $deg;
+
+        $x = ($start['distance'] * sin ($sa1) * cos ($sa2)) - ($finish['distance'] * sin ($fa1) * cos ($fa2));
+        $y = ($start['distance'] * sin ($sa1) * sin ($sa2)) - ($finish['distance'] * sin ($fa1) * sin ($fa2));
+        $z = ($start['distance'] * cos ($sa1)) - ($finish['distance'] * cos ($fa1));
+
+        $distance = round (sqrt (pow ($x, 2) + pow ($y, 2) + pow ($z, 2)));
+
+        // Calculate the Speed of the Ship.
+        $shipspeed = pow ($level_factor, $playerinfo['engines']);
+
+        // Calculate the Trip time.
+        $triptime = round ($distance / $shipspeed);
+
+        if ($destination == $playerinfo['sector'])
+        {
+            $triptime = 0;
+            $energyscooped = 0;
+        }
+        else if ($triptime == 0 && $destination != $playerinfo['sector'])
+        {
+            $triptime = 1;
+        }
+
+        // Check to see if engage isn't set or if triptime is larger than 100 and engage is set to 1
+        if ( is_null ($engage) || ($triptime > 100 && $engage == 1))
+        {
+            // Handle the Fuel Scoop.
+            $energyscooped = HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg);
+
+            /* Output:
+             * With your engines, it will take X turns to complete the journey.
+             * You would gather Y units of energy
+             */
+            $langvars['l_rs_movetime'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_movetime']);
+            $langvars['l_rs_energy'] = str_replace ("[energy]", number_format ($energyscooped, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_energy']);
+            echo $langvars['l_rs_movetime'] . "<br>" . $langvars['l_rs_energy'] . "<br><br>";
+
+            if ($triptime > $playerinfo['turns'])
+            {
+                // Player doesn't have enough turns.
+                /* Output:
+                 * You do not have enough turns left, and cannot embark on this journey.
+                 */
+                echo $langvars['l_rs_noturns'];
+            }
+            else
+            {
+                // Player has enough turns.
+                /* Output:
+                 * You have X turns. <a href=rsmove.php?engage=2&destination=$destination>Engage</a> engines?
+                 */
+                $langvars['l_rs_engage_link'] = "<a href=rsmove.php?engage=2&destination=$destination>" . $langvars['l_rs_engage_link'] . "</a>";
+                $langvars['l_rs_engage'] = str_replace ("[turns]", number_format ($playerinfo['turns'], 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_engage']);
+                $langvars['l_rs_engage'] = str_replace ("[engage]", $langvars['l_rs_engage_link'], $langvars['l_rs_engage']);
+                echo $langvars['l_rs_engage'] . "<br><br>";
+            }
+
+        }
+        elseif ($engage > 0)
+        {
+            // Handle the Fuel Scoop.
+            $energyscooped = HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg);
+
+            if ($triptime > $playerinfo['turns'])
+            {
+                /* Output:
+                 * With your engines, it will take X turns to complete the journey.
+                 * You do not have enough turns left, and cannot embark on this journey.
+                 */
+
+                $langvars['l_rs_movetime'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_movetime']);
+                echo $langvars['l_rs_movetime'] . "<br><br>";
+                echo $langvars['l_rs_noturns'] . "<br><br>";
+                $resx = $db->Execute ("UPDATE {$db->prefix}ships SET cleared_defences=' ' WHERE ship_id = ?;", array ($playerinfo['ship_id']));
+                DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
+            }
+            else
+            {
+                $ok=1;
+                $sector = $destination;
+                $calledfrom = "rsmove.php";
+                include_once './check_fighters.php';
+                if ($ok > 0)
+                {
+                    /* Output:
+                     * You are now in sector X. You used Y turns, and gained Z energy units.
+                     */
+
+                    $langvars = BntTranslate::load ($db, $lang, array ('rsmove', 'common', 'global_funcs', 'global_includes', 'combat', 'footer', 'news'));
+                    $stamp = date ("Y-m-d H:i:s");
+                    $update = $db->Execute ("UPDATE {$db->prefix}ships SET last_login = ?, sector = ?, ship_energy = ship_energy + ?, turns = turns - ?, turns_used = turns_used + ? WHERE ship_id = ?;", array ($stamp, $destination, $energyscooped, $triptime, $triptime, $playerinfo['ship_id']));
+                    DbOp::dbResult ($db, $update, __LINE__, __FILE__);
+                    BntLogMove::writeLog ($db, $playerinfo['ship_id'], $destination);
+                    $langvars['l_rs_ready'] = str_replace ("[sector]", $destination, $langvars['l_rs_ready']);
+                    $langvars['l_rs_ready'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_ready']);
+                    $langvars['l_rs_ready'] = str_replace ("[energy]", number_format ($energyscooped, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_ready']);
+                    echo $langvars['l_rs_ready'] . "<br><br>";
+                    include_once './check_mines.php';
+                }
+            }
+        }
+
     }
 
-    if ($destination == $playerinfo['sector'])
-    {
-        $triptime = 0;
-        $energyscooped = 0;
-    }
 }
+BntText::gotoMain ($db, $lang, $langvars);
+include './footer.php';
 
-if (!isset ($destination))
+// Now for our functions.
+function HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg)
 {
-    echo "<form action=rsmove.php method=post>";
-    $langvars['l_rs_insector'] = str_replace ("[sector]", $playerinfo['sector'], $langvars['l_rs_insector']);
-    $langvars['l_rs_insector'] = str_replace ("[sector_max]", $sector_max - 1, $langvars['l_rs_insector']);
-    echo $langvars['l_rs_insector'] . "<br><br>";
-    echo $langvars['l_rs_whichsector'] . ":  <input type=text name=destination size=10 maxlength=10><br><br>";
-    echo "<input type=submit value='" . $langvars['l_rs_submit'] . "'><br><br>";
-    echo "</form>";
-}
-elseif (($destination < $sector_max && empty ($engage)) || ($destination < $sector_max && $triptime > 100 && $engage == 1))
-{
+    // Check if we have a FuelScoop
     if ($playerinfo['dev_fuelscoop'] == "Y")
     {
+        // WE have a FuelScoop, no calculate the amount of Energy Scooped.
         $energyscooped = $distance * 100;
     }
     else
     {
+        // Nope, the FuelScoop won't be installed until next Tuesday (StarTrek Quote) :P
         $energyscooped = 0;
     }
 
+// Seems this will never happen ?
     if ($playerinfo['dev_fuelscoop'] == "Y" && $energyscooped == 0 && $triptime == 1)
     {
         $energyscooped = 100;
     }
 
-    $free_power = BntCalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
+    // Calculate the Ship Free Power.
+    $free_power = BntCalcLevels::Energy ($playerinfo['power'], $bntreg->get('level_factor') ) - $playerinfo['ship_energy'];
     if ($free_power < $energyscooped)
     {
+        // Clip the Energy Scooped to the maximum Free Power available.
         $energyscooped = $free_power;
     }
 
+// Not too sure what this line is doing, may need to add debugging code.
+// Could be checking for a negitive scoop value.
     if ($energyscooped < 1)
     {
         $energyscooped = 0;
     }
 
-    $langvars['l_rs_movetime'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_movetime']);
-    $langvars['l_rs_energy'] = str_replace ("[energy]", number_format ($energyscooped, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_energy']);
-    echo $langvars['l_rs_movetime'] . " " . $langvars['l_rs_energy'] . "<br><br>";
-
-    if ($triptime > $playerinfo['turns'])
-    {
-        echo $langvars['l_rs_noturns'];
-    }
-    else
-    {
-        $langvars['l_rs_engage_link'] = "<a href=rsmove.php?engage=2&destination=$destination>" . $langvars['l_rs_engage_link'] . "</a>";
-        $langvars['l_rs_engage'] = str_replace ("[turns]", number_format ($playerinfo['turns'], 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_engage']);
-        $langvars['l_rs_engage'] = str_replace ("[engage]", $langvars['l_rs_engage_link'], $langvars['l_rs_engage']);
-        echo $langvars['l_rs_engage'] . "<br><br>";
-    }
-}
-elseif ($destination < $sector_max && $engage > 0)
-{
-    if ($playerinfo['dev_fuelscoop'] == "Y")
-    {
-        $energyscooped = $distance * 100;
-    }
-    else
-    {
-        $energyscooped = 0;
-    }
-
-    if ($playerinfo['dev_fuelscoop'] == "Y" && $energyscooped == 0 && $triptime == 1)
-    {
-        $energyscooped = 100;
-    }
-
-    $free_power = BntCalcLevels::Energy ($playerinfo['power'], $level_factor) - $playerinfo['ship_energy'];
-    if ($free_power < $energyscooped)
-    {
-        $energyscooped = $free_power;
-    }
-
-    if (!isset ($energyscooped) || $energyscooped < 1)
-    {
-        $energyscooped = 0;
-    }
-
-    if ($triptime > $playerinfo['turns'])
-    {
-        $langvars['l_rs_movetime'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_movetime']);
-        echo $langvars['l_rs_movetime'] . "<br><br>";
-        echo $langvars['l_rs_noturns'] . "<br><br>";
-        $resx = $db->Execute ("UPDATE {$db->prefix}ships SET cleared_defences=' ' WHERE ship_id = ?;", array ($playerinfo['ship_id']));
-        DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
-    }
-    else
-    {
-        $ok=1;
-        $sector = $destination;
-        $calledfrom = "rsmove.php";
-        include_once './check_fighters.php';
-        if ($ok > 0)
-        {
-            $langvars = BntTranslate::load ($db, $lang, array ('rsmove', 'common', 'global_funcs', 'global_includes', 'combat', 'footer', 'news'));
-            $stamp = date ("Y-m-d H:i:s");
-            $update = $db->Execute ("UPDATE {$db->prefix}ships SET last_login = ?, sector = ?, ship_energy = ship_energy + ?, turns = turns - ?, turns_used = turns_used + ? WHERE ship_id = ?;", array ($stamp, $destination, $energyscooped, $triptime, $triptime, $playerinfo['ship_id']));
-            DbOp::dbResult ($db, $update, __LINE__, __FILE__);
-            BntLogMove::writeLog ($db, $playerinfo['ship_id'], $destination);
-            $langvars['l_rs_ready'] = str_replace ("[sector]", $destination, $langvars['l_rs_ready']);
-            $langvars['l_rs_ready'] = str_replace ("[triptime]", number_format ($triptime, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_ready']);
-            $langvars['l_rs_ready'] = str_replace ("[energy]", number_format ($energyscooped, 0, $local_number_dec_point, $local_number_thousands_sep), $langvars['l_rs_ready']);
-            echo $langvars['l_rs_ready'] . "<br><br>";
-            include_once './check_mines.php';
-        }
-    }
-}
-else
-{
-    echo $langvars['l_rs_invalid'] . ".<br><br>";
-    $resx = $db->Execute ("UPDATE {$db->prefix}ships SET cleared_defences=' ' WHERE ship_id = ?;", array ($playerinfo['ship_id']));
-    DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
+    return $energyscooped;
 }
 
-$langvars = BntTranslate::load ($db, $lang, array ('global_funcs'));
-BntText::gotoMain ($db, $lang, $langvars);
-include './footer.php';
 ?>
