@@ -1,3 +1,8 @@
+TheMightyDude (05 October 2013)
+--------------------------------------
+Fixed issue in rsmove.php due to change in revision 3018, we validate this more correctly now.
+Fixed bug in preset.php where it accept the last sector, we also validate this more correctly now as well, however room for improvement.
+
 TheMightyDude (23 September 2013)
 --------------------------------------
 Fixed bug in BntDb::initDb(...) where it had the database name argument missing.
